RESOLVED FIXED139031
Fix unused variable warning in Biquad.cpp
https://bugs.webkit.org/show_bug.cgi?id=139031
Summary Fix unused variable warning in Biquad.cpp
Éva Balázsfalvi
Reported 2014-11-24 12:40:07 PST
kBufferSize is only used within OS(DARWIN) guard, so its declaration should be guarded too. warning: ../../Source/WebCore/platform/audio/Biquad.cpp:48:11: warning: unused variable 'kBufferSize' [-Wunused-const-variable] const int kBufferSize = 1024; ^ 1 warning generated.
Attachments
Patch (1.05 KB, patch)
2014-11-24 12:43 PST, Éva Balázsfalvi
no flags
Éva Balázsfalvi
Comment 1 2014-11-24 12:43:52 PST
Andreas Kling
Comment 2 2014-11-24 16:02:21 PST
Comment on attachment 242168 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-11-24 23:41:12 PST
Comment on attachment 242168 [details] Patch Clearing flags on attachment: 242168 Committed r176537: <http://trac.webkit.org/changeset/176537>
WebKit Commit Bot
Comment 4 2014-11-24 23:41:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.