Fix unused variable warning in Biquad.cpp https://bugs.webkit.org/show_bug.cgi?id=139031

Reviewed by Andreas Kling.

No new tests needed.

* platform/audio/Biquad.cpp:


Canonical link: https://commits.webkit.org/156916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176537 268f45cc-cd09-0410-ab3c-d52691b4dbfc